Fix button on safari mobile

--- a/src/main.css
+++ b/src/main.css
@@ -98,6 +98,7 @@ nav {
   height: 5rem;
   font-size: 3rem;
   margin: 0 1rem;
+  padding: 0;
   transition: transform 100ms;
   cursor: pointer;
 }
